--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,7 @@
 /* menu.css */
 body {
   font-family: Arial, sans-serif;
-  background: #f0f0f0;
+  background: rgb(40,2,40);
   display: flex;
   justify-content: center;
   align-items: center;
