--- a/css/game.css
+++ b/css/game.css
@@ -5,6 +5,14 @@ body {
     padding: 20px;
     text-align: center;
   }
+
+  body {
+    background-image: url('../images/background.png');
+    background-size: cover;          /* Ajusta la imagen para cubrir todo el fondo */
+    background-position: center;     /* Centra la imagen */
+    background-repeat: no-repeat;    /* Evita que la imagen se repita */
+    background-attachment: fixed; 
+    }
   
   .game-container {
     max-width: 600px;
