--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -8,6 +8,14 @@ body {
   margin: 0;
 }
 
+body {
+  background-image: url('../images/background.png');
+  background-size: cover;          /* Ajusta la imagen para cubrir todo el fondo */
+  background-position: center;     /* Centra la imagen */
+  background-repeat: no-repeat;    /* Evita que la imagen se repita */
+  background-attachment: fixed; 
+  }
+
 .scoreboard-container {
   background: #fff;
   padding: 20px;
