--- a/css/game.css
+++ b/css/game.css
@@ -7,10 +7,10 @@ body {
   }
 
   body {
-    background-image: url('../images/background.png');
-    background-size: cover;          /* Ajusta la imagen para cubrir todo el fondo */
-    background-position: center;     /* Centra la imagen */
-    background-repeat: no-repeat;    /* Evita que la imagen se repita */
+    background-image: url('../assets/background.png');
+    background-size: cover;          
+    background-position: center;     
+    background-repeat: no-repeat;    
     background-attachment: fixed; 
     }
   
@@ -42,11 +42,13 @@ body {
   
   #red { background: red; }
   #green { background: green; }
-  #blue { background: blue; }
+  #blue { background: rgb(3, 3, 169); }
   #yellow { background: yellow; }
   
   .color-btn.active {
-    filter: brightness(300%);
+    filter: brightness(1.8);
+    transform: scale(1.05);
+    transition: filter 0.2s ease, transform 0.2s ease;
   }
 
   .game-container{
