--- a/css/menu.css
+++ b/css/menu.css
@@ -9,17 +9,17 @@ body {
 }
 
 body {
-  background-image: url('../images/background.png');
-  background-size: cover;          /* Ajusta la imagen para cubrir todo el fondo */
-  background-position: center;     /* Centra la imagen */
-  background-repeat: no-repeat;    /* Evita que la imagen se repita */
+  background-image: url('../assets/background.png');
+  background-size: cover;          
+  background-position: center;     
+  background-repeat: no-repeat;    
   background-attachment: fixed; 
   }
 
 .menu-container {
-  background: #fff;
+  background: #181529;
   padding: 90px 40px;
-  border-radius: 8px;
+  border-radius: 25px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   width: 90%;
   max-width: 750px;
@@ -27,7 +27,7 @@ body {
   min-height: 750px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Distribute children vertically */
+  justify-content: space-between; 
   text-align: center;
 }
 
@@ -42,40 +42,54 @@ body {
   margin: 20px 0;
 }
 
-.button-group {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  flex-shrink: 0;
-}
+
 
 .menu-container button {
-  background-color: #007BFF;
-  border: none;
-  color: #fff;
-  padding: 20px;
-  font-size: 18px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 
-    0 4px 6px rgba(0, 0, 0, 0.2),
-    0 8px 10px rgba(0, 0, 0, 0.15);
-}
+    background-color: transparent;
+    border: none;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 400px;  
+    height: 120px;  
+    cursor: pointer;
+    
+    /* Centra el texto en el boton */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+    
+    transition: transform 0.2s ease; 
+  }
+  
+  .menu-container button:hover {
+    transform: scale(1.05); 
+  }
+  
+  /* NO SON PNG, CAMBIAR A PNG */
+  .start-btn {
+    background-image: url('../assets/bluebtn.png');
+  }
+  
+  .score-btn {
+    background-image: url('../assets/lbluebtn.png');
+  }
+  
+  
+  .button-group {
+    display: flex;
+    flex-direction: column;
+    gap: 50px; 
+    align-items: center; 
+  }
 
-.menu-container button:hover {
-  background-color: #0056b3;
-  box-shadow: 
-    0 6px 8px rgba(0, 0, 0, 0.3),
-    0 10px 12px rgba(0, 0, 0, 0.25);
-}
-
-.button-group {
-  display: flex;
-  flex-direction: column;
-  gap: 50px; /* Increased gap between buttons */
-  flex-shrink: 0;
-}
+  .menu-container button span {
+    display: block;
+    transform: translateY(-5px);
+  }
 
 #start-form input {
   padding: 10px;
