--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -9,10 +9,10 @@ body {
 }
 
 body {
-  background-image: url('../images/background.png');
-  background-size: cover;          /* Ajusta la imagen para cubrir todo el fondo */
-  background-position: center;     /* Centra la imagen */
-  background-repeat: no-repeat;    /* Evita que la imagen se repita */
+  background-image: url('../assets/background.png');
+  background-size: cover;          
+  background-position: center;     
+  background-repeat: no-repeat;    
   background-attachment: fixed; 
   }
 
